added pointer cursor styling to buttons, bug fixes: fixed bug where it allowed you to press keys and increase losses value during transition animation, fixed bug where extra word slots appeared on subsequent rounds in the same browser session as the previous round did not clear them properly.

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,7 @@ h1 {
 }
 
 #start-game{
+  cursor: pointer;
   background-color:grey;
   font-size: x-large;
   color: white;
@@ -180,6 +181,7 @@ h1 {
 }
 
 .end-screen .return-main-menu {
+  cursor:pointer;
   border: black solid 5px;
   padding:25px;
   margin: 20px;
